--- a/todo/build.gradle
+++ b/todo/build.gradle
@@ -13,4 +13,5 @@ repositories {
 
 dependencies {
     testCompile group: 'junit', name: 'junit', version: '4.12'
+    implementation 'org.apache.poi:poi-ooxml:3.17'
 }
