--- a/todo/build.gradle
+++ b/todo/build.gradle
@@ -12,6 +12,7 @@ repositories {
 }
 
 dependencies {
-    testCompile group: 'junit', name: 'junit', version: '4.12'
     implementation 'org.apache.poi:poi-ooxml:3.17'
+    testCompile group: 'junit', name: 'junit', version: '4.12'
+    compile group: 'com.googlecode.json-simple', name: 'json-simple', version: '1.1.1'
 }
